--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
+body{
+  background-color: #E6E7EE;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.contents{
+  display: flex;
+  justify-content: left;
+}
+
+.header{
+  width: 100%;
+}
+
+.app{
+  flex: 1;
 }
