--- a/src/css/components/Header.css
+++ b/src/css/components/Header.css
@@ -1,7 +1,42 @@
 .header{
-    height: 100vh;
-    max-width: 200px;
+    min-height: 819px;
+    min-width: 233px;
     background: #E6E7EE;
     padding: 10px;
-    box-shadow:  5px 5px 20px #c8c9cc, -5px -5px 20px #ffffff;
+    padding-left: 24px;
+    box-shadow:  10px 10px 15px #CDCDCD,-10px -10px 15px #FFFFFF;
+}
+
+.header__links a{
+    margin-bottom: 47px;
+}
+
+.header__mypage{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 20px;
+}
+
+.header__mypage-img{
+    width: 50px;
+    height: 50px;
+    background-color: transparent linear-gradient(311deg,#E6E7EE 0%,#E5E6EC 100%) 0% 0% no-repeat padding-box;
+    box-shadow: 4px 4px 10px#CDCDCD,-4px -4px 10px #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.header__mypage-img img{
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+}
+
+.header__mypage-text{
+    font-size: 16px;
+    color: #575F6B;
+    font-family: "Sofia Pro";
 }
