--- a/src/css/components/EditPost.css
+++ b/src/css/components/EditPost.css
@@ -1,18 +1,19 @@
-.deletePost{
+.editPost{
   text-align: center;
   margin: 0 auto;
 
 }
-.deletePost__byebye:hover{
+.editPost__byebye:hover{
   opacity: 0.5;
 }
-.deletePost__byebye{
+.editPost__byebye{
   max-width: 212px;
   width: 100%;
   height: 56px;
   line-height: 56px;
   box-shadow:  6px 6px 20px #c8c9cc, -6px -6px 20px #ffffff;
   padding: 0 20px;
+
   background: #E6E7EE;
   border-radius: 35px;
   margin: 0 auto;
