--- a/src/css/components/Post.css
+++ b/src/css/components/Post.css
@@ -2,3 +2,10 @@
   max-width: 1000px;
   margin: 0 auto;
 }
+
+.post-list__menu{
+  display: flex;
+  justify-content: center;
+  margin-top: 150px;
+  gap: 80px;
+}
