--- a/src/css/components/Post.css
+++ b/src/css/components/Post.css
@@ -46,14 +46,20 @@
   opacity: 0.5;
 }
 
+.post__button {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .post__button button {
   border: none;
-  width: 40%;
+  width: 50%;
   height: 56px;
   line-height: 56px;
   box-shadow:  6px 6px 20px #c8c9cc, -6px -6px 20px #ffffff;
   padding: 0 20px;
   background: #E6E7EE;
   border-radius: 35px;
-  margin: 0 auto;
+  margin: 0 20px;
 }
