facebookログイン追加

--- a/src/css/components/Signup.css
+++ b/src/css/components/Signup.css
@@ -30,3 +30,10 @@
   .modal__button:hover {
     background: #0056b3;
   }
+
+  .signup__sns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
