若干のアニメーション修正

--- a/src/css/components/Mypage.css
+++ b/src/css/components/Mypage.css
@@ -33,9 +33,14 @@
     text-decoration: none;
 }
 
-.mypage-list__item:hover{
-    opacity: 0.5;
-}
+.mypage-list__item:hover {
+    animation: press 0.1s forwards;
+  }
+  
+  .mypage-list__item:not(:hover){
+    animation: release 0.1s forwards;
+  }
+  
 
 .mypage-list__item-content{
     overflow: hidden;
