--- a/src/css/components/Header.css
+++ b/src/css/components/Header.css
@@ -1,14 +1,22 @@
 .header{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     min-height: 819px;
     min-width: 233px;
     background: #E6E7EE;
     padding: 10px;
     padding-left: 24px;
     box-shadow:  10px 10px 15px #CDCDCD,-10px -10px 15px #FFFFFF;
+    height: 100vh;
 }
 
 .header__links a{
     margin-bottom: 47px;
+}
+
+.header p:hover{
+    opacity: 0.5;
 }
 
 .header__button{
@@ -49,3 +57,30 @@
     animation: release 0.1s forwards;
 }
 
+.header__search {
+    max-width: 220px;
+    width: 100%;
+    margin-left: 250px;
+    height: 43px;
+    line-height: 43px;
+    position: absolute;
+    top: 2%;
+    background: #E6E7EE; 
+    border-radius: 8px; 
+    box-shadow: inset 4px 4px 8px #c8c9cc, inset -4px -4px 8px #ffffff; 
+    padding: 0 10px; 
+    display: flex;
+    align-items: center; 
+    justify-content: space-between; 
+    color: #000; 
+    border-radius: 30px;
+}
+
+.header__search input {
+    border: none; 
+    background: none; 
+    outline: none; 
+    width: 100%; 
+    height: 100%; 
+    color: inherit; 
+}
