タイトルを一行目だけ表示し、あとは...にした

--- a/src/css/components/BlogList.css
+++ b/src/css/components/BlogList.css
@@ -33,3 +33,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.blog-list__item-title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
