--- a/src/css/components/Comment.css
+++ b/src/css/components/Comment.css
@@ -85,3 +85,22 @@
 .comment-post:not(:hover){
     animation: release 0.1s forwards;
 }
+
+.comment-list__item-delete{
+  padding: 7px 10px;
+  max-width: 75px;
+  width: 100%;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow:  6px 6px 20px #c8c9cc, -6px -6px 20px #ffffff;
+}
+
+
+.comment-list__item-delete:hover{
+  animation: press 0.1s forwards;
+}
+
+
+.comment-list__item-delete:not(:hover){
+  animation: release 0.1s forwards;
+}
