--- a/src/css/components/Comment.css
+++ b/src/css/components/Comment.css
@@ -11,14 +11,17 @@
   }
   
   .comment-list__item{
-    border-top: 3px solid #575F6B;
-    padding: 50px 0;
+    /* border-top: 3px solid #575F6B;
+    padding: 50px 0; */
   }
   
   .comment-list__item-head{
+    border-top: 3px solid #575F6B;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 30px;
   }
 
   .comment-user{
