下書き保存修正、細かいデザイン修正

--- a/src/css/components/Mypage.css
+++ b/src/css/components/Mypage.css
@@ -48,3 +48,9 @@
     white-space: nowrap;
     text-decoration: none;
 }
+
+.mypage-list__item-title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
