--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ a{
   text-decoration: none;
 }
 
+h1{
+    margin-top: 70px;
+    font-size: 32px;
+}
+
 @keyframes press {
   0% {
       box-shadow: 5px 5px 20px #CDCDCD, -5px -5px 20px #FFFFFF;
