--- a/src/css/components/GetUserInfo.css
+++ b/src/css/components/GetUserInfo.css
@@ -13,4 +13,9 @@
     border-radius: 50%;
     object-fit: cover;
     background-color: #fff;
+    transition: 0.2s all;
+}
+
+.mypage__user--profilePicture img:hover{
+    opacity: 0.5;
 }
